HelloUltraviolet/Fixtures/RejectedSource/Statements/RegionDiagnostic/Source/Main.uv
//! Rejected statement specimen for region diagnostic coverage.

public procedure regionDiagnosticReference() -> i32 {
    region {
        missing_value
    }
    return 0
}
